--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,9 @@
                             <goal>shade</goal>
                         </goals>
                         <phase>package</phase>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
