--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <diozero.version>1.4.1</diozero.version>
     </properties>
 
     <dependencyManagement>
@@ -19,7 +20,7 @@
             <dependency>
                 <groupId>com.diozero</groupId>
                 <artifactId>diozero-bom</artifactId>
-                <version>1.4.1</version>
+                <version>${diozero.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -30,6 +31,11 @@
         <dependency>
             <groupId>com.diozero</groupId>
             <artifactId>diozero-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.diozero</groupId>
+            <artifactId>diozero-ws281x-java</artifactId>
+            <version>${diozero.version}</version>
         </dependency>
     </dependencies>
 
